# MikrotikSSHPiano

./: CMakeLists.txt  MikrotikSSHPiano.sln  README.md
MikrotikSSHPiano/: KeyToNote.cpp  KeyToNote.h  MikrotikSSHPiano.cpp  MikrotikSSHPiano.vcxproj  MikrotikSSHPiano.vcxproj.filters  SshWrapper.cpp  SshWrapper.h
include/: KeyToNote.hpp  Mikrotik.hpp  SshWrapper.hpp
include/ssh/: SshChannel.hpp  SshSession.hpp  SshSocket.hpp
src/: KeyToNote.cpp  Mikrotik.cpp  SshWrapper.cpp  mikrotik-ssh-piano.cpp
src/ssh/: SshChannel.cpp  SshSession.cpp
